# yesclip

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
src/: clipboard.rs  config.rs  main.rs  tray.rs  watcher.rs
